cluster/apps/dns/pihole/pihole-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: dns
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:v5.8.1
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: client-upd
          containerPort: 67
          protocol: UDP
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        livenessProbe:
          httpGet:
            path: /admin.index.php
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /admin.index.php
            port: 80
          initialDelaySeconds: 25
          periodSeconds: 5
        volumeMounts:
        - name: etc-pihole
          mountPath: /etc/pihole
        - name: etc-dnsmasq
          mountPath: /etc/dnsmasq.d
        - name: var-log
          mountPath: /var/log
        - name: var-log-lighttpd
          mountPath: /var/log/lighttpd
        - name: ftlconf
          mountPath: /etc/pihole/pihole-FTL.conf
          subPath: pihole-FTL.conf
        - name: dns-records
          mountPath: /etc/pihole/custom.list
          subPath: custom.list
        - name: regex
          mountPath: /etc/pihole/regex.list
          subPath: regex.list
        - name: whitelist
          mountPath: /etc/pihole/whitelist.txt
          subPath: whitelist.txt
        - name: adlists
          mountPath: /etc/pihole/adlists.list
          subPath: adlists.list
      restartPolicy: Always
      volumes:
      - name: etc-pihole
        emptyDir:
          medium: Memory
      - name: etc-dnsmasq
        emptyDir:
          medium: Memory
      - name: var-log
        emptyDir:
          medium: Memory
      - name: var-log-lighttpd
        emptyDir:
          medium: Memory
      - name: ftlconf
        configMap:
          name: pihole-ftl.conf
          items:
            - key: pihole-FTL.conf
              path: pihole-FTL.conf
      - name: dns-records
        configMap:
          name: custom.list
          items:
            - key: custom.list
              path: custom.list
      - name: regex
        configMap:
          name: regex.list
          items:
            - key: regex.list
              path: regex.list
      - name: whitelist
        configMap:
          name: whitelist.txt
          items:
            - key: whitelist.txt
              path: whitelist.txt
      - name: adlists
        configMap:
          name: adlists.list
          items:
            - key: adlists.list
              path: adlists.list
