cluster/apps/dns/pihole/pihole-tcp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: dns
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/address-pool: dns
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  sessionAffinity: None
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: ${PIHOLE_SVC_LB_IP}
