cluster/apps/dns/pihole/pihole-udp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  namespace: dns
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/address-pool: dns
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  selector:
    app: pihole
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  - name: client-udp
    port: 67
    protocol: UDP
    targetPort: client-udp
  sessionAffinity: None
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: ${PIHOLE_SVC_LB_IP}
